fixed layout issue

--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -15,7 +15,16 @@
         margin-top: -3px;
         font-weight: 500;
         padding: 1px 2px;
-        width: 100%;
+        width: calc(100% - 20px);
+        height: 28px;
+        text-overflow: ellipsis;
+        white-space: wrap;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        word-wrap: break-word;
+
     
         &:hover {
         cursor: pointer;
@@ -52,7 +61,8 @@
     .movie-info {
         visibility: hidden;
         max-width : 100%;
-        height: calc(100% - 31.797px);
+        height: calc(100% - 46.797px);
+        min-width: 94%;
         border-radius: 4.5px;
         position: absolute;
         top : 0;
@@ -101,7 +111,6 @@
         
         .card-summary{
             letter-spacing: -0.2px;
-            // Remove after 5th line of text  
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: normal;
@@ -111,6 +120,8 @@
             display: -webkit-box;
             -webkit-line-clamp: 6 ;
             -webkit-box-orient: vertical;
+
+            // Remove after 5th line of text  
 
             @media (min-width: em(670)) {
                 font-size: .9rem;
